sample-domain1/ingress-route-console.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: sample-domain1-ingress-console
  namespace: sample-domain1-ns
spec:
  ingressClassName: public
  rules:
    - http:
        paths:
          - path: /console
            pathType: Prefix
            backend:
              service:
                name: sample-domain1-admin-server
                port:
                  number: 7001
