sample-domain1/ingress-route.yaml
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: sample-domain1-ingress
  namespace: sample-domain1-ns
spec:
  ingressClassName: public
  rules:
    - http:
        paths:
          - path: /quickstart
            pathType: Prefix
            backend:
              service:
                name: sample-domain1-cluster-cluster-1
                port:
                  number: 8001
          - path: /console
            pathType: Prefix
            backend:
              service:
                name: sample-domain1-admin-server
                port:
                  number: 7001
